--- a/resources/static/cssy/navigation.css
+++ b/resources/static/cssy/navigation.css
@@ -230,3 +230,115 @@ h2{color: #da8820;}
 #searchbutton{
     margin-left: -120px;
 }
+                
+*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
+.w-button {
+    display:inline-block;
+    padding:9px 15px;
+    background-color:#3898EC;
+    color:white;border:0;
+    line-height:inherit;
+    text-decoration:none;
+    cursor:pointer;
+    border-radius:0}
+input.w-button{-webkit-appearance:button}
+html[data-w-dynpage] [data-w-cloak]{color:transparent !important}
+.w-input {
+    display:block;
+    width:100%;
+    height:38px;
+    padding:8px 12px;
+    margin-bottom:10px;
+    font-size:14px;
+    line-height:1.42857143;
+    color:#333333;
+    vertical-align:middle;
+    background-color:#ffffff;
+    border:1px solid #cccccc}
+body {
+    font-family:Arial,sans-serif;
+    font-size:14px;
+    line-height:20px;}
+.w-col{
+    position:relative;
+    float:left;
+    width:100%;
+    min-height:1px;
+    padding-left:10px;
+    padding-right:10px}
+.w-col{padding-left:0
+    ;padding-right:0}
+.w-col-1{width:8.33333333%}
+.w-col-11{width:91.66666667%}
+label{display:block;
+      margin-bottom:5px;
+      font-weight:bold}
+.cont {
+    padding-top: 1px;
+}
+.login_wrapper {
+    display: none;
+    position: absolute;
+    right: 20px;
+    width: 300px;
+    height: 250px;
+    padding: 24px;
+    border-radius: 3px;
+    background-color: rgba(76, 79, 82, .66);
+    box-shadow: 0 0 11px 1px #000;
+    opacity: 0.90;
+    text-align: justify;
+}
+
+
+
+.login_input {
+    border: 1px none #000;
+    border-radius: 8px;
+    background-color: #111;
+    opacity: 0.54;
+}
+
+.login_button {
+    position: static;
+    display: inline-block;
+    overflow: visible;
+    width: 100%;
+    margin-top: 15px;
+    margin-left: 1px;
+    padding-top: 9px;
+    border-radius: 8px;
+    background-color: #da8820;
+    box-shadow: 1px 1px 8px 1px #000, inset 0 9px 13px 0 hsla(0, 0%, 100%, .5), inset 0 -4px 13px 0 hsla(0, 0%, 100%, .5);
+    text-shadow: 3px 3px 2px #000;
+}
+
+.login_label {
+    padding-bottom: 6px;
+    border-radius: 8px;
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 30px;
+    text-decoration: none;
+    text-transform: capitalize;
+    text-shadow: 4px 4px 8px #000, 0 0 0 hsla(0, 0%, 100%, .25);
+}
+
+.login_lab {
+    margin-left: -13px;
+    padding-top: 7px;
+    padding-left: 0px;
+    text-align: center;
+    color: #d1d1d1;
+    font-weight: 700;
+    text-shadow: 0px -1px black, 0px 1px rgba(255, 255, 255, 0.25);
+    line-height: 18px;
+}
+
+.checkbox_login {
+    margin-top: 8px;
+    padding-top: 0px;
+}
+.w-checkbox {
+    padding-top: 5px;
+}
+    
